Attempt Fix Dates reference for mobile

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ http://www.templatemo.com/tm-406-flex
                                     <ul class="menu-first">
                                         <!--li class="active"><a href="#">Home</a></li-->
                                         <li><a href="#About">About</a></li>
-                                        <li><a href="#About">Important Dates</a></li>
-					<li><a href="#News">News</a></li>
+                                        <li><a href="#Dates">Important Dates</a></li>
+			    <li><a href="#News">News</a></li>
                                         <li><a href="#Keynotes">Keynotes</a></li>
                                         <li><a href="#Call">Call For papers</a></li>
                                         <li><a href="#Commitee">Organization</a></li>
@@ -188,7 +188,7 @@ http://www.templatemo.com/tm-406-flex
 			  </ul>
                         </p>
                     </div> <!-- /.col-md-8 -->
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-4 col-sm-6" id="Dates">
 		<h2>Important dates</h2>
 		<p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span><br />
 		<p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span><br />
