added venue images, updated keynotes and organization commitee

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ http://www.templatemo.com/tm-406-flex
                 <div class="row">
                     <div class="team-member col-md-3 col-sm-6">
                         <div class="member-thumb">
-                            <img src="images/member1.png" alt="">
+                            <img src="images/keynote1.png" alt="">
                             <div class="team-overlay">
 				    <h3>Seth Stephens-Davidowitz</h3>
                                 <span>XXX</span>
@@ -255,7 +255,23 @@ http://www.templatemo.com/tm-406-flex
                             </div> <!-- /.team-overlay -->
                         </div> <!-- /.member-thumb -->
                     </div> <!-- /.team-member -->
+                    <div class="team-member col-md-3 col-sm-6">
+                        <div class="member-thumb">
+                            <img src="images/keynote2.png" alt="">
+                            <div class="team-overlay">
+				    <h3>Ben Zhao</h3>
+                                <span>U. Chicago</span>
+                                <ul class="social">
+				    <li><a href="http://people.cs.uchicago.edu/~ravenben/" class="fa fa-globe"></a></li>
+                                    <li><a href="https://twitter.com/ravenben" class="fa fa-twitter"></a></li>
+                                    <li><a href="https://www.linkedin.com/in/ravenben" class="fa fa-linkedin"></a></li>
+                                    <!--li><a href="" class="fa fa-linkedin"></a></li-->
+                                </ul>
+                            </div> <!-- /.team-overlay -->
+                        </div> <!-- /.member-thumb -->
+                    </div> <!-- /.team-member -->
                 </div> <!-- /.row -->
+
             </div> <!-- /.container -->
         </div> <!-- /#our-team -->
 
@@ -587,21 +603,22 @@ http://www.templatemo.com/tm-406-flex
 
 
                         <p>
-                          <li> <b>General Chair</b> <a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a> </li>
-                          <li> <b>Local Chair</b> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a> </li>
-                          <li> <b>Program Co-chair</b> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></li>
-                          <li> <b>Program Co-chair</b> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a></li>
-                          <li> <b>Registration Chair</b> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a></li>
-                          <li> <b>Tutorial Co-chair</b> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a></li>
-                          <li> <b>Tutorial Co-chair</b> <a href="https://burnap.org/" target=_blank>Pete Burnap</a></li>
-                          <li> <b>Workshop Co-chair</b> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a></li>
-                          <li> <b>Data Chair</b> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a></li>
-                          <li> <b>Outreach Co-chair</b> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a></li>
-                          <li> <b>Outreach Co-chair</b> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a></li>
-                          <li> <b>Web Co-chair</b> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a></li>
-                          <li> <b>Web Co-chair</b> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a> </li>
-			  <li> <b>Publicity Chair</b> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a> </li>
-                          <li> <b>Publication Chair</b> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a> </li>
+                          <li> <b>General Chair</b> <a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a> Penn State U., USA</li>
+                          <li> <b>Local Chair</b> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a> Towson U., USA</li>
+                          <li> <b>Program Co-chair</b> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a> QCRI, Qatar</li>
+                          <li> <b>Program Co-chair</b> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a> King's College London, UK</li>
+                          <li> <b>Registration Chair</b> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a> Virginia Commonwealth U., USA</li>
+                          <li> <b>Tutorial Co-chair</b> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a> Bell Labs Cambridge, UK</li>
+                          <li> <b>Tutorial Co-chair</b> <a href="https://burnap.org/" target=_blank>Pete Burnap</a> Cardiff U., UK</li>
+                          <li> <b>Workshop Co-chair</b> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a> QCRI, Qatar</li>
+                          <li> <b>Workshop Co-chair</b> <a href="http://www.l3s.de/~gadiraju/" target=_blank>Ujwal Gadiraju</a> L3S Research Center, Germany</li>
+                          <li> <b>Data Chair</b> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a> Federal University of Minas Gerais, Brazil</li>
+                          <li> <b>Outreach Co-chair</b> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a> U. Southampton, UK</li>
+                          <li> <b>Outreach Co-chair</b> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a> Singapore Management U., Singapore</li>
+                          <li> <b>Web Co-chair</b> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a> King's College London, UK</li>
+                          <li> <b>Web Co-chair</b> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a>  Aalto U., Finland</li>
+			  <li> <b>Publicity Chair</b> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a> Bournemouth U., UK</li>
+                          <li> <b>Publication Chair</b> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a> Ajou U., Korea</li>
                         </p>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
@@ -612,26 +629,56 @@ http://www.templatemo.com/tm-406-flex
         <div class="content-section" id="Venue" name="Venue">
             <div class="container">
                 <div class="row">
-                    <div class="heading-section col-md-12 text-left">
-
-                    <h2>Venue and Logistics</h2>
-					</div>
-				</div>
+                    <div class="heading-section col-md-12 text-center">
+                        <h2>Venue</h2>
+			<p>Towson University Smith Hall Auditorium, Baltimore</p>
+                    </div> <!-- /.heading-section -->
+                </div> <!-- /.row -->
                 <div class="row">
-                    <div class="col-md-12">
-			<!--div class="googlemap-wrapper">
-                            <div id="map_canvas" class="map-canvas"></div>
-                        </div--> <!-- /.googlemap-wrapper -->
+                    <div class="portfolio-item col-md-3 col-sm-6">
+                        <div class="portfolio-thumb">
+                            <img src="images/venue1.jpg" alt="">
+                            <div class="portfolio-overlay">
+				    <p>Venue Auditorium</p>
+                            </div> <!-- /.portfolio-overlay -->
+                        </div> <!-- /.portfolio-thumb -->
+                    </div> <!-- /.portfolio-item -->
+                    <div class="portfolio-item col-md-3 col-sm-6">
+                        <div class="portfolio-thumb">
+                            <img src="images/venue2.jpg" alt="">
+                            <div class="portfolio-overlay">
+				    <p>Venue</p>
+                            </div> <!-- /.portfolio-overlay -->
+                        </div> <!-- /.portfolio-thumb -->
+                    </div> <!-- /.portfolio-item -->
+                    <div class="portfolio-item col-md-3 col-sm-6">
+                        <div class="portfolio-thumb">
+                            <img src="images/venue3.jpg" alt="">
+                            <div class="portfolio-overlay">
+				    <p>Hotel</p>
+                            </div> <!-- /.portfolio-overlay -->
+                        </div> <!-- /.portfolio-thumb -->
+                    </div> <!-- /.portfolio-item -->
+                    <div class="portfolio-item col-md-3 col-sm-6">
+                        <div class="portfolio-thumb">
+                            <img src="images/venue4.jpg" alt="">
+                            <div class="portfolio-overlay">
+				    <p>Towson University</p>
+                            </div> <!-- /.portfolio-overlay -->
+                        </div> <!-- /.portfolio-thumb -->
+                    </div> <!-- /.portfolio-item -->
+                </div> <!-- /.row -->
 
-                        <h3> Venue </h3>
+                <div class="row">
+                    <div class="col-md-8 col-sm-6">
+                        <p> This year the conference would be held at the city of Baltimore, Towson University Smith Hall Auditorium.
+						<!-- spacing for mobile viewing --><br><br>
+						</p>
+                    <!--/div>
+                    <div class="col-md-4 col-sm-6"-->
+			    <h3> Lodging </h3>
                         <p>
-                          This year the confernece would be held at the city of Baltimore, Towson University Smith Hall Auditorium.
-                        </p>
-
-                        <h3> Lodging </h3>
-                        <p>
-			<li></li>
-			<li>  <a href="http://www.starwoodhotels.com/sheraton/property/overview/index.html?propertyID=33&SWAQ=958P">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
+                        <li>  <a href="http://www.starwoodhotels.com/sheraton/property/overview/index.html?propertyID=33&SWAQ=958P">Sheraton Baltimore North</a>, Address: 903 Dulaney Valley Road , Towson, MD 21252 , 888-627-7147 </li>
                             <li> Towson university student dorm (more info later) </li>
                         </p>
 
@@ -641,13 +688,11 @@ http://www.templatemo.com/tm-406-flex
                           Bus service between Sheraton hotel and conference venue will run in
                           the morning and evening
                         </p>
-
-
-                    </div> <!-- /.col-md-12 -->
+                    </div> <!-- /.col-md-4 -->
                 </div> <!-- /.row -->
 
             </div> <!-- /.container -->
-        </div> <!-- /#our-team -->
+        </div> <!-- /#portfolio -->
 
         <div class="content-section" id="Program" name="Program">
             <div class="container">
