updated organization committee table

--- a/index.html
+++ b/index.html
@@ -601,25 +601,24 @@ http://www.templatemo.com/tm-406-flex
                     <div class="heading-section col-md-12 text-left">
                       <h2>Organization Commitee</h2>
 
-
-                        <p>
-                          <li> <b>General Chair</b> <a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a> Penn State U., USA</li>
-                          <li> <b>Local Chair</b> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a> Towson U., USA</li>
-                          <li> <b>Program Co-chair</b> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a> QCRI, Qatar</li>
-                          <li> <b>Program Co-chair</b> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a> King's College London, UK</li>
-                          <li> <b>Registration Chair</b> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a> Virginia Commonwealth U., USA</li>
-                          <li> <b>Tutorial Co-chair</b> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a> Bell Labs Cambridge, UK</li>
-                          <li> <b>Tutorial Co-chair</b> <a href="https://burnap.org/" target=_blank>Pete Burnap</a> Cardiff U., UK</li>
-                          <li> <b>Workshop Co-chair</b> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a> QCRI, Qatar</li>
-                          <li> <b>Workshop Co-chair</b> <a href="http://www.l3s.de/~gadiraju/" target=_blank>Ujwal Gadiraju</a> L3S Research Center, Germany</li>
-                          <li> <b>Data Chair</b> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a> Federal University of Minas Gerais, Brazil</li>
-                          <li> <b>Outreach Co-chair</b> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a> U. Southampton, UK</li>
-                          <li> <b>Outreach Co-chair</b> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a> Singapore Management U., Singapore</li>
-                          <li> <b>Web Co-chair</b> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a> King's College London, UK</li>
-                          <li> <b>Web Co-chair</b> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a>  Aalto U., Finland</li>
-			  <li> <b>Publicity Chair</b> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a> Bournemouth U., UK</li>
-                          <li> <b>Publication Chair</b> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a> Ajou U., Korea</li>
-                        </p>
+			<table>
+				<tr><td><b>General Chair</b></td> <td><a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a></td> <td> Penn State U., USA</td></tr>
+				<tr><td><b>Local Chair</b></td> <td> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a></td> <td> Towson U., USA</td></tr>
+				<tr><td><b>Program Co-chair</b></td> <td> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></td> <td> QCRI, Qatar</td></tr>
+				<tr><td><b>Program Co-chair</b></td> <td> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a></td> <td> King's College London, UK</td></tr>
+				<tr><td><b>Registration Chair</b></td> <td> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a></td> <td> Virginia Commonwealth U., USA</td></tr>
+				<tr><td><b>Tutorial Co-chair</b></td> <td> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a></td> <td> Bell Labs Cambridge, UK</td></tr>
+				<tr><td><b>Tutorial Co-chair</b></td> <td> <a href="https://burnap.org/" target=_blank>Pete Burnap</a></td> <td> Cardiff U., UK</td></tr>
+				<tr><td><b>Workshop Co-chair</b></td> <td> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a></td> <td> QCRI, Qatar</td></tr>
+				<tr><td><b>Workshop Co-chair</b></td> <td> <a href="http://www.l3s.de/~gadiraju/" target=_blank>Ujwal Gadiraju</a></td> <td> L3S Research Center, Germany</td></tr>
+				<tr><td><b>Data Chair</b></td> <td> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a></td> <td> Federal University of Minas Gerais, Brazil</td></tr>
+				<tr><td><b>Outreach Co-chair</b></td> <td> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a></td> <td> U. Southampton, UK</td></tr>
+				<tr><td><b>Outreach Co-chair</b></td> <td> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a></td> <td> Singapore Management U., Singapore</td></tr>
+				<tr><td><b>Web Co-chair</b></td> <td> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a></td> <td> King's College London, UK</td></tr>
+				<tr><td><b>Web Co-chair</b></td> <td> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a></td> <td>  Aalto U., Finland</td></tr>
+				<tr><td><b>Publicity Chair</b></td> <td> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a></td> <td> Bournemouth U., UK</td></tr>
+				<tr><li><td><b>Publication Chair</b></td> <td> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a></td> <td> Ajou U., Korea</td></tr>
+			</table>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
 
