--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!-- Authors: Sagar Joglekar and Kiran Garimella -->
     <head>
         <meta charset="utf-8">
         <title>ACM HyperText 2018</title>
