--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ http://www.templatemo.com/tm-406-flex
                             <img src="images/keynote1.png" alt="">
                             <div class="team-overlay">
 				    <h3>Seth Stephens-Davidowitz</h3>
-                                <span>XXX</span>
+                                <span></span>
                                 <ul class="social">
 				    <li><a href="http://sethsd.com/" class="fa fa-globe"></a></li>
                                     <li><a href="https://twitter.com/seths_d" class="fa fa-twitter"></a></li>
@@ -603,22 +603,22 @@ http://www.templatemo.com/tm-406-flex
                       <h2>Organization Commitee</h2>
 
 			<table>
-				<tr><td><b>General Chair</b></td> <td><a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a></td> <td> Penn State U., USA</td></tr>
-				<tr><td><b>Local Chair</b></td> <td> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a></td> <td> Towson U., USA</td></tr>
-				<tr><td><b>Program Co-chair</b></td> <td> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></td> <td> QCRI, Qatar</td></tr>
-				<tr><td><b>Program Co-chair</b></td> <td> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a></td> <td> King's College London, UK</td></tr>
-				<tr><td><b>Registration Chair</b></td> <td> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a></td> <td> Virginia Commonwealth U., USA</td></tr>
-				<tr><td><b>Tutorial Co-chair</b></td> <td> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a></td> <td> Bell Labs Cambridge, UK</td></tr>
-				<tr><td><b>Tutorial Co-chair</b></td> <td> <a href="https://burnap.org/" target=_blank>Pete Burnap</a></td> <td> Cardiff U., UK</td></tr>
-				<tr><td><b>Workshop Co-chair</b></td> <td> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a></td> <td> QCRI, Qatar</td></tr>
-				<tr><td><b>Workshop Co-chair</b></td> <td> <a href="http://www.l3s.de/~gadiraju/" target=_blank>Ujwal Gadiraju</a></td> <td> L3S Research Center, Germany</td></tr>
-				<tr><td><b>Data Chair</b></td> <td> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a></td> <td> Federal University of Minas Gerais, Brazil</td></tr>
-				<tr><td><b>Outreach Co-chair</b></td> <td> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a></td> <td> U. Southampton, UK</td></tr>
-				<tr><td><b>Outreach Co-chair</b></td> <td> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a></td> <td> Singapore Management U., Singapore</td></tr>
-				<tr><td><b>Web Co-chair</b></td> <td> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a></td> <td> King's College London, UK</td></tr>
-				<tr><td><b>Web Co-chair</b></td> <td> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a></td> <td>  Aalto U., Finland</td></tr>
-				<tr><td><b>Publicity Chair</b></td> <td> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a></td> <td> Bournemouth U., UK</td></tr>
-				<tr><li><td><b>Publication Chair</b></td> <td> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a></td> <td> Ajou U., Korea</td></tr>
+				<tr><td><b>General Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><a href="http://nike.psu.edu/dongwon/" target=_blank>Dongwon Lee</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Penn State U., USA</td></tr>
+				<tr><td><b>Local Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://www.towson.edu/fcsm/departments/computerinfosci/facultystaff/nnguyen.html" target=_blank>Nam Nguyen</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Towson U., USA</td></tr>
+				<tr><td><b>Program Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://ingmarweber.de/" target=_blank>Ingmar Weber</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> QCRI, Qatar</td></tr>
+				<tr><td><b>Program Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://nms.kcl.ac.uk/nishanth.sastry/" target=_blank>Nishanth Sastry</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> King's College London, UK</td></tr>
+				<tr><td><b>Registration Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://www.people.vcu.edu/~tndinh/" target=_blank>Thang Dinh</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Virginia Commonwealth U., USA</td></tr>
+				<tr><td><b>Tutorial Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://www.visionresearchwitch.com/" target=_blank>Miriam Redi</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bell Labs Cambridge, UK</td></tr>
+				<tr><td><b>Tutorial Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://burnap.org/" target=_blank>Pete Burnap</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Cardiff U., UK</td></tr>
+				<tr><td><b>Workshop Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://haewoon.io/" target=_blank>Haewoon Kwak</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> QCRI, Qatar</td></tr>
+				<tr><td><b>Workshop Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td> <a href="http://www.l3s.de/~gadiraju/" target=_blank>Ujwal Gadiraju</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> L3S Research Center, Germany</td></tr>
+				<tr><td><b>Data Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://homepages.dcc.ufmg.br/~fabricio/" target=_blank>Fabricio Benevenuto</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Federal University of Minas Gerais, Brazil</td></tr>
+				<tr><td><b>Outreach Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://www.ecs.soton.ac.uk/people/dem" target=_blank>David Millard</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> U. Southampton, UK</td></tr>
+				<tr><td><b>Outreach Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://sites.google.com/site/aseplim/" target=_blank>Ee-Peng Lim</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Singapore Management U., Singapore</td></tr>
+				<tr><td><b>Web Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://sagarjoglekar.github.io/" target=_blank>Sagar Joglekar</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> King's College London, UK</td></tr>
+				<tr><td><b>Web Co-chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://users.ics.aalto.fi/kiran/" target=_blank>Kiran Garimella</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td>  Aalto U., Finland</td></tr>
+				<tr><td><b>Publicity Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="http://staffprofiles.bournemouth.ac.uk/display/chargood" target=_blank>Charlie Hargood</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Bournemouth U., UK</td></tr>
+				<tr><td><b>Publication Chair</b></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> <a href="https://www.kyungsikhan.com/" target=_blank>Kyungsik Han</a></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Ajou U., Korea</td></tr>
 			</table>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
