added images of sponsors

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ http://www.templatemo.com/tm-406-flex
 
 	                <div class="row">
                     <div class="col-md-8 col-sm-6">
-<h2>About</h2>
+			<h2>About</h2>
                         <p>The ACM Conference on Hypertext and Social Media (HT) is a premium venue for high quality peer-reviewed research on theory,
                           systems and applications for hypertext and social media. The conference would be held in the beautiful city of Baltimore this year.
                           HyperText is concerned with all aspects of modern hypertext research,
@@ -188,7 +188,16 @@ http://www.templatemo.com/tm-406-flex
                           <li>Demonstrations</li>
 			  </ul>
                         </p>
+			<h2>Sponsors</h2>
+			<p>Hypertext is sponsered by.</p>
+			<p style="margin-top:10px;">
+			    <a href="http://www.acm.org/" title="ACM - Association for Computing Machinery"><img src="https://ht.acm.org/ht2017/images/acm.jpg" width="250" alt="ACM - Association for Computing Machinery"></a>
+			</p>
+			<p style="margin-top:10px;">
+			    <a href="http://www.sigweb.org/" title="ACM SIGWEB"><img src="https://ht.acm.org/ht2017/images/sigweb_logo.png" alt="ACM SIGWEB"></a>
+			</p>
                     </div> <!-- /.col-md-8 -->
+
                     <div class="col-md-4 col-sm-6" id="Dates">
 		<h2>Important dates</h2>
 		<p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span><br />
