added sponsors images

--- a/index.html
+++ b/index.html
@@ -189,13 +189,11 @@ http://www.templatemo.com/tm-406-flex
 			  </ul>
                         </p>
 			<h2>Sponsors</h2>
-			<p>Hypertext is sponsered by.</p>
-			<p style="margin-top:10px;">
-			    <a href="http://www.acm.org/" title="ACM - Association for Computing Machinery"><img src="https://ht.acm.org/ht2017/images/acm.jpg" width="250" alt="ACM - Association for Computing Machinery"></a>
-			</p>
-			<p style="margin-top:10px;">
-			    <a href="http://www.sigweb.org/" title="ACM SIGWEB"><img src="https://ht.acm.org/ht2017/images/sigweb_logo.png" alt="ACM SIGWEB"></a>
-			</p>
+			<!--p>Hypertext is supported by:</p-->
+			<table>
+				<tr><td><a href="http://www.acm.org/" target="_blank" title="ACM - Association for Computing Machinery"><img src="https://ht.acm.org/ht2017/images/acm.jpg" width="250" alt="ACM - Association for Computing Machinery"></a></td>
+					<td><a href="http://www.sigweb.org/" target="_blank" title="ACM SIGWEB"><img src="https://ht.acm.org/ht2017/images/sigweb_logo.png" alt="ACM SIGWEB"></a></td></tr>
+			</table>
                     </div> <!-- /.col-md-8 -->
 
                     <div class="col-md-4 col-sm-6" id="Dates">
