Add extension for TWEB notice to news

--- a/index.html
+++ b/index.html
@@ -230,8 +230,11 @@ http://www.templatemo.com/tm-406-flex
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
                         <h2>News</h2>
+                        <ul>
 
-                            <h3>Coming soon!</h3>
+                            <li><h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a> </h3></li>
+
+                        </ul>
 
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
