--- a/index.html
+++ b/index.html
@@ -309,7 +309,11 @@ http://www.templatemo.com/tm-406-flex
                                             </ul>
 				<p>
 				Accepted papers will appear in the Hypertext 2018 Conference Proceedings that will be published by ACM and additionally be made available through the ACM Digital Library.
-				Selected papers will be considered for a fast track publication in ACM Transactions on the Web. As traditional, one paper will be selected for the Douglas Englebart best paper award.
+				Selected papers from HT18 will be invited to submit an extension to 
+				ACM <a href=http://tweb.acm.org/>TWEB</a>. Submitted extensions will be reviewed 
+				in a fast-tracked process.
+				As traditional, one paper will be selected for the Douglas Englebart best paper award.
+
 				</p>
 
 				<p>
